# pyresume

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  taskfile.yaml
.claude/: CLAUDE.md
.claude/rules/: git.md  style.md  testing.md
src/pyresume/: __init__.py  __main__.py  app.py  cli.py  convert.py  css_styles.py  file_operations.py  pdf_generator.py  settings.py  themes.py  tui.py  version.py
src/pyresume/assets/: example-resume.md
src/pyresume/assets/styles/: simple-style.css
src/pyresume/resources/: example-resume.md
src/pyresume/resources/themes/: clean.css  minimal.css  slate.css
tests/: file_operations_test.py  pdf_generator_test.py  styles_test.py  test_cli.py  test_convert.py  test_themes.py  test_tui.py  version_test.py
tests/data/: non-compliant-file.mk  test-markdown-file.md
