[project]
name = "pyresume"
version = "4.0.3"
description = "My python approach to building my resume from markdown"
authors = [{ name = "Itzalak", email = "itzalak@tuta.io" }]
readme = "README.md"
keywords = ["curriculum", "resume"]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "pytest >= 8.3.3",
  "md2pdf >= 1.0.1",
  "toml >= 0.10.2",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".direnv",
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
version = "4.0.1"
update_changelog_on_bump = true
version_provider = "uv"

[tool.commitizen.customize]
schema = "<type>: <body>"
schema_pattern = "(bump|break|feat|chore|tools|docs|fix):(\\s.*)"
bump_pattern = "^(bump|break|feat|chore|tools|fix)"
bump_map = { "break" = "MAJOR", "feat" = "MINOR", "chore" = "PATCH", "tools" = "PATCH", "fix" = "PATCH", "docs" = "PATCH" }
change_type_order = ["break", "feat", "fix", "chore", "tools", "docs"]
commit_parser = "^(?P<change_type>break|feat|chore|tools|docs|fix):\\s(?P<message>.*)?"
changelog_pattern = "^(break|feat|chore|tools|docs|fix)?(!)?"
change_type_map = { "break" = "Breaking Change", "feat" = "Changed", "fix" = "Fixed", "chore" = "Changed", "tools" = "Tools", "docs" = "Notes" }
