[project]
name = "pyresume"
version = "4.1.1"
description = "My python approach to building my resume from markdown"
readme = "README.md"
keywords = ["curriculum", "resume"]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer >= 0.9.0",
    "weasyprint >= 60.0",
    "markdown >= 3.5.0",
    "inquirerpy>=0.3.4",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
pyresume = "pyresume.cli:app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
update_changelog_on_bump = true
version_provider = "uv"

[tool.commitizen.customize]
schema = "<type>[(scope)]: <message>"
schema_pattern = "^(break|feat|fix|docs|chore)(\\([^()\\r\\n]+\\))?(!)?:\\s.*"
bump_pattern = "^(break|feat|fix|chore)"
bump_map = { "break" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "chore" = "PATCH" }
commit_parser = "^(?P<change_type>feat|fix|break|docs|chore)(?:\\((?P<scope>[^()\\r\\n]*)\\))?(?P<breaking>!)?:\\s(?P<message>.*)?"
changelog_pattern = "^(break|feat|fix|chore|docs)"
change_type_order = [
    "⚠️ Breaking Change",
    "🚀 New Feature",
    "🧹 Chore",
    "🐛 Fix",
    "📚 Documentation",
]

[tool.commitizen.customize.change_type_map]
break = "⚠️ Breaking Change"
feat = "🚀 New Feature"
chore = "🧹 Chore"
fix = "🐛 Fix"
docs = "📚 Documentation"
